--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,51 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+
+//board
+.board_tb{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 30px;
+}
+
+
+table {
+    border-collapse: separate;
+    border-spacing: 0;
+    width: 100%;
+    border:none;
+  }
+  th,
+  td {
+    padding: 6px 15px;
+  }
+  th {
+    background: #42444e;
+    color: #fff;
+    text-align: left;
+  }
+  tr:first-child th:first-child {
+    border-top-left-radius: 6px;
+  }
+  tr:first-child th:last-child {
+    border-top-right-radius: 6px;
+  }
+  td {
+    border-right: 1px solid #c6c9cc;
+    border-bottom: 1px solid #c6c9cc;
+  }
+  td:first-child {
+    border-left: 1px solid #c6c9cc;
+  }
+  tr:nth-child(even) td {
+    background: #eaeaed;
+  }
+  tr:last-child td:first-child {
+    border-bottom-left-radius: 6px;
+  }
+  tr:last-child td:last-child {
+    border-bottom-right-radius: 6px;
+  }
